--- a/tests/integration/targets/elasticsearch_keystore/tasks/1-test-keys.yml
+++ b/tests/integration/targets/elasticsearch_keystore/tasks/1-test-keys.yml
@@ -1,5 +1,12 @@
 ---
-- block:
+- name: Run tasks inside ES container
+  vars:
+    ansible_connection: community.docker.docker_api
+    ansible_host: single-node-01
+    ansible_python_interpreter: /usr/libexec/platform-python
+    ansible_remote_tmp: /tmp
+    ansible_user: elasticsearch
+  block:
 
   - name: Attempt to add a new key
     community.elastic.elasticsearch_keystore:
