--- a/tests/integration/targets/elasticsearch_keystore/tasks/1-test-keys.yml
+++ b/tests/integration/targets/elasticsearch_keystore/tasks/1-test-keys.yml
@@ -31,7 +31,8 @@
       state: absent
     register: key_delete
 
-  - assert:
+  - name: Run assertions
+    assert:
       that:
         - "key_add is changed"
         - "key_replace is not changed"
