--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -148,6 +148,13 @@ jobs:
           max_attempts: 3
           command: ansible-galaxy collection install community.docker -p ansible_collections/
 
+      - name: Install ansible.posix
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 3
+          max_attempts: 3
+          command: ansible-galaxy collection install ansible.posix -p ansible_collections/
+
       - name: Run integration tests on Python ${{ matrix.python_version }} | ${{ matrix.ansible_version }}
         run: ansible-test integration -v --color --retry-on-error --python ${{ matrix.python_version }} --continue-on-error --diff --coverage ${{ matrix.elastic_module }}
 
