More trial/error

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -134,29 +134,29 @@ jobs:
           max_attempts: 3
           command: pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible_version }}.tar.gz --disable-pip-version-check
 
-      - name: Install community.general
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 3
-          max_attempts: 3
-          command: ansible-galaxy collection install community.general -p ansible_collections/
+      # - name: Install community.general
+      #   uses: nick-invision/retry@v2
+      #   with:
+      #     timeout_minutes: 3
+      #     max_attempts: 3
+      #     command: ansible-galaxy collection install community.general -p ansible_collections/
 
-      - name: Install community.docker
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 3
-          max_attempts: 3
-          command: ansible-galaxy collection install community.docker -p ansible_collections/
+      # - name: Install community.docker
+      #   uses: nick-invision/retry@v2
+      #   with:
+      #     timeout_minutes: 3
+      #     max_attempts: 3
+      #     command: ansible-galaxy collection install community.docker -p ansible_collections/
 
-      - name: Install ansible.posix
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 3
-          max_attempts: 3
-          command: ansible-galaxy collection install ansible.posix -p ansible_collections/
+      # - name: Install ansible.posix
+      #   uses: nick-invision/retry@v2
+      #   with:
+      #     timeout_minutes: 3
+      #     max_attempts: 3
+      #     command: ansible-galaxy collection install ansible.posix -p ansible_collections/
 
       - name: Run integration tests on Python ${{ matrix.python_version }} | ${{ matrix.ansible_version }}
-        run: ansible-test integration -v --allow-root --allow-destructive --color --retry-on-error --python ${{ matrix.python_version }} --continue-on-error --diff --coverage ${{ matrix.elastic_module }}
+        run: ansible-test integration -v --requirements --allow-root --allow-destructive --color --retry-on-error --python ${{ matrix.python_version }} --continue-on-error --diff --coverage ${{ matrix.elastic_module }}
 
       - name: Upload Coverage data
         run: tests/coverage.sh
