--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -99,6 +99,7 @@ jobs:
       run:
         working-directory: ansible_collections/community/elastic
     strategy:
+      fail-fast: false
       matrix:
         python_version:
           - "3.6"
@@ -125,7 +126,7 @@ jobs:
         with:
           timeout_minutes: 3
           max_attempts: 3
-          command: pip install docker elasticsearch requests coverage six https://github.com/ansible/ansible/archive/${{ matrix.ansible_version }}.tar.gz
+          command: pip install -U python-apt docker elasticsearch requests coverage six https://github.com/ansible/ansible/archive/${{ matrix.ansible_version }}.tar.gz
 
       # - name: Install ansible-base (${{ matrix.ansible_version }})
       #   uses: nick-invision/retry@v2
@@ -140,7 +141,7 @@ jobs:
       - name: Run integration tests on Python ${{ matrix.python_version }} | ${{ matrix.ansible_version }}
         run: |
           sudo apt-get update
-          sudo apt-get install python-apt python3-apt
+          sudo apt-get install python3-apt
           ansible-test integration -v --requirements --allow-root --allow-destructive --color --retry-on-error --python ${{ matrix.python_version }} --continue-on-error --diff --coverage ${{ matrix.elastic_module }}
 
       - name: Upload Coverage data
