--- a/roles/elasticsearch/tasks/main.yml
+++ b/roles/elasticsearch/tasks/main.yml
@@ -37,7 +37,7 @@
     dest: "{{ item.dest }}"
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default(es_group) }}"
-    mode: "{{ item.mode | default(0660) }}"
+    mode: "0660"
     force: "{{ item.force | default(omit) }}"
   notify: Restart Elasticsearch
   loop:
@@ -58,7 +58,7 @@
     dest: "{{ es_conf_dir }}/elasticsearch.yml"
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default(es_group) }}"
-    mode: 0660
+    mode: "0660"
   when: fragment_content.results | length > 0
   notify: Restart Elasticsearch
 
@@ -68,7 +68,7 @@
     state: touch
     owner: root
     group: "{{ es_group }}"
-    mode: 0644
+    mode: "0644"
     access_time: preserve
     modification_time: preserve
 
@@ -81,7 +81,7 @@
     state: "{{ item.state | default('present') }}"
     owner: root
     group: "{{ es_group }}"
-    mode: 0644
+    mode: "0644"
   notify: Restart Elasticsearch
   loop: "{{ es_systemd_overrides is iterable | ternary(es_systemd_overrides, []) }}"
 
@@ -90,7 +90,7 @@
     src: "{{ item.value }}"
     dest: "{{ es_ssl_cert_path }}/{{ item.value | basename }}"
     group: "{{ es_group }}"
-    mode: 0640
+    mode: "0640"
   notify: Restart Elasticsearch
   when: item.value
   loop: "{{ es_pki_files | dict2items }}"
