--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -127,10 +127,10 @@ jobs:
         with:
           path: ansible_collections/community/elastic
 
-      # - name: Set up Python ${{ matrix.python_version }}
-      #   uses: actions/setup-python@v2
-      #   with:
-      #     python-version: ${{ matrix.python_version }}
+      - name: Set up Python ${{ matrix.python_version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python_version }}
 
       - name: Install python packages
         uses: nick-invision/retry@v2
