--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -120,7 +120,7 @@ jobs:
           - os: ubuntu-20.04
             python_version: "3.6"
           - elastic_module: elasticsearch_keystore
-            ansible_version: "2.10"
+            ansible_version: "stable-2.10"
         elastic_module: ${{ fromJson(needs.integration_matrix.outputs.matrix) }}
     steps:
 
